--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <nav class="navbar navbar-default" role="navigation">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a href="/" class="navbar-brand">CLIO</a>
+                <a href="./" class="navbar-brand">CLIO</a>
             </div>
             <ul class="nav navbar-nav">
-                <li><a href="/getting-started">Getting started</a></li>
-                <li><a href="/documentation">Documentation</a></li>
-                <li><a href="/examples">Examples</a></li>
+                <li><a href="./getting-started">Getting started</a></li>
+                <li><a href="./documentation">Documentation</a></li>
+                <li><a href="./examples">Examples</a></li>
             </ul>
         </div>
     </nav>
@@ -103,7 +103,7 @@
         </div><!-- .inside -->
         <div class="getting-started col-md-12">
             <h4>
-                <a href="/getting-started">Getting started</a>
+                <a href="./getting-started">Getting started</a>
             </h4>
         </div>
     </div>
