logo: png -> svg

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 </a>
             </div>
             <div class="main-logo col-md-4 col-sm-6">
-                <img src="images/clio-logo.png" alt="">
+                <img src="images/clio-logo.svg" alt="">
             </div>
             <div class="logo col-md-3 col-sm-3 hidden-xs">
                 <a href="https://github.com/grsmv/clio">
